--- a/index.html
+++ b/index.html
@@ -4,9 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
 <body>
-    <div></div>
+    <div>
+        <div class="d-flex justify-content-center container flex-wrap">
+            <div class="d-inline-flex p-4 m-3 align-content-center" id="cajauno">
+                <div class="">
+                    <div class=" ">
+                        <div style="width: 99%;">
+                            <p id="primeror">Actualmente no hay vacantes disponibles. Prescribite para que te avisemos cuando se abran nuevos cupos.</p>
+                        </div>
+                        
+                        <div class="">
+                            <button class="btn btn-outline-success" id="boton1" type="submit" style="width: auto;">Preinscribite</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <div class="d-inline-flex m-5">
+                        <div class="d-flex justify-content-center" id="segcaja">
+                            <div class="" style="width: 70%;">
+                                <h4 id="subtit">Mirá los cursos disponibles por temática</h4>
+                                <p>Las capacitaciones disponibles sonintroductorias y pertenecen a la primera etapa de un trayecto fortivo. Vas a poder avanzar a la segunda etapa cuando se abran las incripciones.</p>
+                            </div>
+                        </div>
+                    </div>
+                        <div class="row">
+                            <div class="d-flex justify-content-center m-3 " id="cards">
+                                <div class="card" style="width: 20%;">
+                                    <img src="./assets/Imagen1.png" class="card-img-top rounded-top-4" alt="...">
+                                    <div class="card-body p-4">
+                                        <h5 class="card-title">Programación</h5>
+                                        <p class="card-text">Desarrollo de software en diferentes lenguajes de programación.</p>
+                                    </div>
+                                </div>
+                                <div class="card" style="width: 20%;">
+                                    <img src="./assets/Imagen2.png" class="card-img-top rounded-top-4" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Testing</h5>
+                                        <p class="card-text">Formas de testear un programa probando su calidad en el trayecto de creación.</p>
+                                    </div>
+                                </div>
+                                <div class="card" style="width: 20%;">
+                                    <img src="./assets/Imagen3.png" class="card-img-top rounded-top-4" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Habilidades digitales</h5>
+                                        <p class="card-text">Fundamentos de las tecnologías digitales para potenciar el uso de dispositivos, software e internet.</p>
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-inline-flex p-4 m-3 align-content-center" >
+                <div class="">
+                    <div class=" ">                        
+                        <div class="">
+                            <button class="btn btn-outline-success" id="boton1" type="submit" style="width: auto;">Grilla de oferta de cursos con días y horarios</button>
+                        </div>
+                    </div>
+                </div>
+            </div>           
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
