--- a/index.html
+++ b/index.html
@@ -13,11 +13,52 @@
     <link rel="stylesheet" href="./assets/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!--============== Unicons Icons ===============-->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100&family=Roboto:wght@900&display=swap"
       rel="stylesheet">
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-top navbar-default bg-celeste-argentina">
+        <div class="container">
+          <nav class="navbar navbar-expand-lg">
+            <div class="container">
+              <div>
+                <div class="navbar-header">
+                  <a class="navbar-brand" href="logo_argentina-blanco.svg">
+                    <img src="./assets/images/logo_argentina-blanco.svg" alt="Logo" height="50px"
+                      class="d-inline-block align-text-top">
+                  </a>
+                </div>
+                <div class="nav navbar-nav navbar-right hidden-xs">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <form class="d-flex" role="search">
+                      <input class="form-control" type="search" placeholder="Buscar tramites, servicios o áreas"
+                        aria-label="Search">
+                      <button class="btn btn-search" type="submit"><i class="uil uil-search fa-lg"></i></button>
+                    </form>
+                  </div>
+                  <div id="cd-login">
+                    <a href="https://mi.argentina.gob.ar" id="btn-mi-argentina" class="btn btn-mi-argentina hidden-xs"
+                      aria-label="Ingresar a Mi Argentina">
+                      <div class="text-primary pull-left"></div>
+                      miArgentina
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </nav>
+        </div>
+      </nav>
+    </header>
     <section
       class="jumbotron align-mid"
       style="
